--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ amqp==2.3.2
 backports.shutil-get-terminal-size==1.0.0
 billiard==3.5.0.5
 celery==4.2.1
+certifi==2018.11.29
+chardet==3.0.4
 decorator==4.3.0
 Django==1.11.15
 enum34==1.1.6
 gevent==1.3.7
 greenlet==0.4.15
 gunicorn==19.9.0
+idna==2.7
 ipython==5.8.0
 ipython-genutils==0.2.0
 kombu==4.2.1
@@ -20,9 +23,11 @@ ptyprocess==0.6.0
 Pygments==2.3.0
 pytz==2018.7
 redis==3.0.1
+requests==2.20.1
 scandir==1.9.0
 simplegeneric==0.8.1
 six==1.11.0
 traitlets==4.3.2
+urllib3==1.24.1
 vine==1.1.4
 wcwidth==0.1.7
